# ProjectHub

./: .gitignore  SETUP.md  create-icons.mjs  crop-icon.mjs  index.html  package-lock.json  package.json  tailwind.config.ts
src/: App.tsx  i18n.ts  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: working-hours-template.xlsx
src-tauri/src/: lib.rs
src/components/layout/: Layout.tsx  Sidebar.tsx  TopBar.tsx
src/components/shared/: DataTable.tsx  DeleteConfirmDialog.tsx  LanguageSwitcher.tsx  StatCard.tsx  StatusBadge.tsx
src/components/ui/: badge.tsx  dialog.tsx  form.tsx  progress.tsx  select.tsx  table.tsx  toaster.tsx
src/db/: index.ts  migrations.ts  schema.ts
src/hooks/: use-toast.ts
src/lib/: utils.ts
src/locales/: ar.json  en.json
src/pages/: Dashboard.tsx  Employees.tsx  HardwareCosts.tsx  ProjectDetails.tsx  Projects.tsx  SmartSearch.tsx  WorkLogs.tsx
src/services/: dashboard.ts  employees.ts  hardwareCosts.ts  importRequirements.ts  importWorkLogs.ts  projects.ts  requirements.ts  requirementsTemplate.ts  seed.ts  workLogs.ts  workingHoursTemplate.ts
src/types/: index.ts
